feat: add API request with async/await

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="src/test.js"></script>
+    <script src="src/api.js"></script>
 </body>
 </html>
