feat: study select option change

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="src/api.js"></script>
+    <label for = "fruitSelect">과일 선택:</label>
+    <select id="fruitSelect">
+        <option value="apple">사과</option>
+        <option value="banana">바나나</option>
+        <option value="cherry">체리</option>
+        <option value="grape">포도</option>
+    </select>
+    <script src="src/form.js"></script>
 </body>
 </html>
