feat: log userName and password on loginBtn click

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <label for = "fruitSelect">과일 선택:</label>
-    <select id="fruitSelect">
-        <option value="apple">사과</option>
-        <option value="banana">바나나</option>
-        <option value="cherry">체리</option>
-        <option value="grape">포도</option>
-    </select>
+    <label for="userName">이름:</label>
+    <input type="text", id="userName", placeholder="이름을 입력하세요." value="홍길동">
+    <label>비밀번호:</label>
+    <input type="password", id="password", placeholder="비밀번호를 입력하세요.">
+    <button>로그인</button>
     <script src="src/form.js"></script>
 </body>
 </html>
