--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="userName">이름:</label>
-    <input type="text", id="userName", placeholder="이름을 입력하세요." value="홍길동">
-    <label>비밀번호:</label>
-    <input type="password", id="password", placeholder="비밀번호를 입력하세요.">
-    <button>로그인</button>
-    <script src="src/form.js"></script>
+    <script src="src/array.js"></script>
 </body>
 </html>
