--- a/animal-album/panda.html
+++ b/animal-album/panda.html
@@ -7,12 +7,12 @@
 <body>
     <div id="app">
         <div class="tab-bar">
-            <a href="/"><div class="clicked">전체</div></a>
+            <a href="/"><div>전체</div></a>
             <a href="penguin.html"><div>펭귄</div></a>
             <a href="koala.html"><div>코알라</div></a>
-            <a href="panda.html"><div>판다</div></a>
+            <a href="panda.html"><div class="clicked">판다</div></a>
         </div>
         <div class="content"></div>
     </div>
-    <script src="./src/index.js"></script>
+    <script src="./src/panda.js"></script>
 </body>
