refactor: update CityList component logic

--- a/trip-wiki/index.html
+++ b/trip-wiki/index.html
@@ -7,10 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/trip-wiki/src/style.css" />
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="module" src="/src/index.js"></script>
+    <div id="app">
+        <!-- App -->
+    </div>
+    <script type="module" src="/trip-wiki/src/index.js"></script>
 </body>
